static/css/style.css
:root {
    --spacer-top: 300px;
    --spacer-bottom: 400px;
    --spacer-mobile: 700px;
}

.row {
	width: 100%;
}

body {
	font-family: 'Inconsolata', Monaco, "Lucida Console", Consolas, "Courier New", "Helvetica Neue";
	background-color: #f9f9f9;
    width: 100%;
	/*height: 9000px;*/
    position: absolute;
}

.spacer {
	height: 50px;
}

strong {
	font-weight: 900;
}

.tile-wrapper {
    height: 780px;
    position: relative;
    /*left: 30%;*/
    /*opacity: 0.2;*/
}

#intro-wrapper {
    min-height: 100vh;
}

.viz-tile {
	/*visibility: hidden;*/
	/*display: none;*/
	position: sticky;
    /*display: none;*/
    top: 40px;
	margin-top: 60px;
	margin-right: 15px;
    /*height: 800px;*/
}

#intro-tile {
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0%);
    margin: auto;
}

.annotated-text {
    z-index: 90;
    cursor: pointer;
}

@media (hover: none) .d3-tip {
	overflow-y: auto;
	max-height: 400px;
}

.tip-text {
	font-size: 9pt;
}

#sections {
	position: absolute;
	display: inline-block;
	width: 300px;
	top: 0px;
	z-index: 50;
}

.step {
	margin-top: var(--spacer-top);
	margin-bottom: var(--spacer-bottom);
	margin-left: 10px;

	min-height: 320px;
	border-radius: 15px;

    background-color: white;

	overflow: hidden;
}


.step.phantom {
    /*margin-top: var(--spacer-top);*/
	/*margin-bottom: var(--spacer-bottom);*/
	/*background-color: rgba(0,0,0,0) !important;*/
    opacity: 0.0;
}

.step .title {
	text-align: center;
	font-weight: bolder;
	background-color: rgba(28, 148, 196, 0.25);
	/*border-radius: 3px;*/

	padding-top: 3px;
	padding-bottom: 3px;
}

.step.phantom .title {
	background-color: rgba(0,0,0,0) !important;
}

.step .body {
	margin-top: 10px;
	font-size: 10pt;

	padding-left: 15px;
    padding-right: 15px;
}

#scroller-buffer {
    	/*background-color: rgba(0,0,0,0) !important;*/

}

.mobile-spacer {
    height: 0px;
}

.sunburst-chart-labels {
    text-shadow:
        -1px -1px 0 #fff,
        0px -1px 0 #fff,
        1px -1px 0 #fff,
        -1px 1px 0 #fff,
        0px 1px 0 #fff,
        1px 1px 0 #fff;

    font-size: 14px;
}

/*#sunburst-wrapper {*/
    /*margin-bottom: 150px;*/
/*}*/

/*#flowchart-tile {*/
    /*margin-right: 100px;*/
/*}*/

#flowchart-wrapper {
    margin-left: 310px;
}

.footer {
    font-size: 10pt;
    padding-top: 40px;
	padding-bottom: 60px;
    min-height: 100vh;
    font-family: "Helvetica Neue", helvetica, arial, sans-serif;
}

@media (max-width: 1100px) {
    #sections {
        /*position: fixed;*/
        /*display: inline-block;*/
        width: 0px;
        top: 0;
        left: 50;
        z-index: 50;
    }

    .step {
        margin-top: 0px;
        margin-bottom: 0px;
        margin-left: 0px;

        min-height: 150px;
        padding-bottom: 10px;
        border-radius: 15px;

        width: 100%;

        font-size: 15pt;

        position: fixed;
        left: 50;
        top: 0;

        opacity: 0.0;

        z-index: 80;

        overflow: hidden;
    }

    .step .body {
        font-size: 15pt;
    }

    .mobile-spacer {
        height: 100vh;
    }

    .viz-tile {
        padding-top: 150px;
    }

    .container {
        width: 95% !important;
        padding-right: 25px !important;
    }

    #flowchart-wrapper {
        margin-left: unset;
    }

    #flowchart-tile {
        margin-left: 10px;
        margin-right: 10px;

        padding-left: 20px;
        padding-right: 10px;
    }

    .sunburst-chart-labels {
        font-size: 16pt;
    }

    #sunburst-select-text {
        font-size: 18pt;
    }

    #annotation-tooltip {
        font-size: 14pt;
    }

    h2 {
        font-size: 26pt;
    }

     #intro-text-block {
         font-size: 16pt;
     }

     .footer {
         font-size: 16pt;
     }

     .tip-text {
         font-size: 12pt;
     }
}

.container {
	/*margin-left: 15%;*/
	/*margin-right: 15%;*/
	/*position: absolute;*/
	/*display: inline-block;*/
	/*position: inline;*/
	/*top: 60px;*/
	z-index: 2;
}

.complaint-box {
	cursor: pointer;
}

.sunburst-select {
	background-color: #fff;
	border: 1px solid #cdcdcd;

	padding-left: 3px;
	padding-right: 3px;
}

.d3-tip, #annotation-tooltip, #category-tooltip {
    max-width: 400px;
	background-color: white;
	color: black;
	border-radius: 5px;
	border: 1px solid black;
	z-index: 100;
    padding: 12px;
}

#category-tooltip {
    line-height: 1.1;
    font-size: 9pt;
}

.d3-tip {
    position: fixed;
    line-height: 1;
}

.annotation-li {
	margin-bottom: 5px;
}

span.category-text {
	padding: 1px;
	padding-left: 2px;
	padding-right: 2px;
}

select.white, span.white {
	background-color: rgba(255,25,25,0.5);
}

select.black, span.black {
	background-color: rgba(50,50,255,0.5);
}

select.latino, span.latino {
	background-color: rgba(255,172,20,0.5);
}

select.other, span.other {
	background-color: rgba(128,128,128,0.5);
}

#slider-div {
	margin-top: 20px;
}

#play-button-div {
	/*width: 55px;*/
	text-align: center;
	/*margin-right: 10px;*/
}

#play-button {
	width: 90%;
	max-width: 55px;
	text-align: center;
	margin-top: 5px;
	/*margin-right: 20px;*/
}

#sort-feature-select {
	margin-top: 15px;
    width: 100%;
}

#flowchart-legend-area {
    width: 100%;
    margin-top: 8px;
}

.date-display {
	/*margin-top: 8px;*/
	min-width: 120px;
}

.date-display-container {
	margin-top: 15px;
}


.chosen-container-div {
	/*margin-top: 20px;*/
}

.chosen-container {
    margin-top: 5px;
}

.chosen-choices {
	font-size: 8pt;
	max-height: 120px;
	overflow-y: auto !important;
}

.detail-title {
	background-color: rgba(28, 148, 196, 0.25);
	border-radius: 3px;
	/*margin-bottom: 5px;*/
	/*padding: 1px;*/
}


.ui-slider {
	visibility: hidden;
	padding: 0px;
	border-width: 0px;
}

.ui-slider-handle {
	visibility: visible;
	border: none;
	/*max-width: 5px;*/
}

#flowchart-tile.group-label {
	z-index: 20;
}

.icon-img {
	height: 13px;
	width: 13px;
	margin-bottom: 2px;
}

/*hr {*/
    /*background-color: #eee;*/
    /*border: 0 none;*/
    /*color: #444444;*/
    /*height: 1px;*/
/*}*/


/*Scroll Arrow at Top of Page*/

.downArrow{
	position: absolute;
	bottom: 8%;
	left: 50%;
}

.bounce {
	-moz-animation: bounce 3s infinite;
	-webkit-animation: bounce 3s infinite;
	animation: bounce 3s infinite;
}
@-moz-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@-webkit-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    -ms-transform: translateY(-30px);
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    -ms-transform: translateY(-15px);
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}

